<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mad.homeworkgroup20.inclass8.DisplayFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/StudInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/StudentInfo"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/DisplayName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="0"
            android:text="@string/DisplayNameLabel" />

        <TextView
            android:id="@+id/NameValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:textAlignment="textStart" />

        <ImageView
            android:id="@+id/editImageView1"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="0"
            android:src="@drawable/ic_action_edit" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/DisplayEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="0"
            android:text="@string/DisplayEmailLabel" />

        <TextView
            android:id="@+id/EmailValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:textAlignment="textStart" />

        <ImageView
            android:id="@+id/editImageView2"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="0"
            android:src="@drawable/ic_action_edit" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/DisplayDepartment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="0"
            android:text="@string/DisplayDepartmentLabel" />

        <TextView
            android:id="@+id/DepartmentValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:textAlignment="textStart" />

        <ImageView
            android:id="@+id/editImageView3"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="0"
            android:src="@drawable/ic_action_edit" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/DisplayMood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="0"
            android:text="@string/DisplayMood" />

        <TextView
            android:id="@+id/MoodValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:textAlignment="textStart" />

        <ImageView
            android:id="@+id/editImageView4"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="0"
            android:src="@drawable/ic_action_edit" />
    </LinearLayout>

</LinearLayout>
